fix: restore schemas/tables banner rows; use .toList() instead of Collectors.toList()